feat: deploy agent-service to EKS, fix Chan Theory pipeline bugs
- Add Dockerfile.agent and K8s manifests for Python agent-service
- Add agent-service ECR repo and gateway route config
- Fix gateway.py/engine.py: process_bar → feed
- Fix segment.py: dual-direction termination detection
- Add .gitignore entries for terraform state/secrets
- Add agent evaluation report (docs/agent-evaluation-report.md)
- Various Java service improvements (immutable patterns)